# VisualScripting

./: CMakeLists.txt  Nodes.pro  README.md  logo.rc  resources.qrc
src/: cross.h  functional.cpp  functional.h  main.cpp  main_window.cpp  main_window.h  node.cpp  node.h  style.h  viewport.cpp  viewport.h
src/exe/: exe.txt
